--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
         <section id="about">
             <div id="my-image">
-                <img src="https://gdurl.com/wpWX" alt="" srcset="">
+                <img src="./10919.jpg" alt="" srcset="">
             </div>
 
             <div id="about-para">
