--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -9,7 +9,7 @@
     <header>
         <h1>Usaid Rashid</h1>
         <h4>Born to code &#128578</h4>
-        <img src="https://drive.google.com/uc?export=download&id=12Qiaoe0S5Hq_UD2YikaFRZL4D1eIC4sN" alt="">
+        <img src="./MyImage.jpg" alt="">
         <hr/>
     </header>
     
