--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -9,7 +9,7 @@
     <header>
         <h1>Usaid Rashid</h1>
         <h4>Born to code &#128578</h4>
-        
+        <img src="./MyImage.jpg" height="200px" width="100px"  alt="">
         <hr/>
     </header>
     
