--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
         <section id="about">
             <div id="my-image">
-                <img src="https://gdurl.com/wpWX" alt="" srcset="">
+                <img src="./10919.jpg" alt="" srcset="">
             </div>
 
             <div id="about-para">
@@ -153,7 +153,7 @@
                     I belong from Agra,Uttar Pradesh,India. <br>
                     I am pursuing B.Tech from Anand Engineering College Agra and is currently in 3rd year of my B.Tech journey. <br>
                     So far , I have worked a lot enhancing my skills whether it is in the field of Competitive Coding or learning a particular domain. <br>
-                    Bagging 4 stars at Codechef and higher ratings at Codeforces & Leetcode too , I have been coding on a number of platforms like Coding Ninjas and Geeks for Geeks securing a rank in top 25 of our College ever. <br>
+                    Bagging 4 stars at Codechef and higher ratings at Codeforces & Leetcode too , I have been coding on a number of platforms like Coding Ninjas and Geeks for Geeks securing a rank in top 10 of our College ever. <br>
                     <br><br>
                     Please refer to my github account mentioned above for my projects ,I have a lot to show &smile;
                     <br>
