--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -41,10 +41,14 @@
                     <li>
                         <h5>Front End</h5>
                         <ul>
-                            <li>HTML</li>
-                            <li>CSS</li>
+                            <li>HTML5</li>
+                            <li>CSS3</li>
                             <li>Java Script</li>
                             <li>React.JS</li>
+                            <li>Tailwind CSS</li>
+                            <li>Bootstrap</li>
+                            <li>SASS</li>
+                            <li>Noty & Flash</li>
                         </ul>
                     </li>
                     <li>
@@ -52,6 +56,13 @@
                         <ul>
                             <li>Node.JS</li>
                             <li>Express.JS</li>
+                            <li>Passport.JS</li>
+                            <li>Socket.IO</li>
+                            <li>Redux store</li>
+                            <li>Rest & Restful APIs</li>
+                            <li>AJAX</li>
+                            <li>Multer</li>
+                            <li>Nodemailer</li>
                         </ul>
                     </li>
                     <li>
@@ -59,6 +70,7 @@
                         <ul>
                             <li>MongoDB</li>
                             <li>My SQL</li>
+                            <li>SQLite</li>
                         </ul>
                     </li>
                 </ul>
