--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -60,6 +60,7 @@
                             <li>Socket.IO</li>
                             <li>Redux store</li>
                             <li>Rest & Restful APIs</li>
+                            <li>Postman API</li>
                             <li>AJAX</li>
                             <li>Multer</li>
                             <li>Nodemailer</li>
