--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -44,6 +44,7 @@
                             <li>HTML5</li>
                             <li>CSS3</li>
                             <li>Java Script</li>
+                            <li>JQuery</li>
                             <li>React.JS</li>
                             <li>Tailwind CSS</li>
                             <li>Bootstrap</li>
