--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 <div class="skill-progress">
                     <div class="thirty-percent mb-light-purple">
                         <div class="skill-name">
-                            <span> AI/ML Basics </span>
+                            <span> SQLite </span>
                         </div>
                     </div>
                 </div>
@@ -291,6 +291,27 @@
                     <div class="eighty-percent mb-black">
                         <div class="skill-name">
                             <span> Unity </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="sixty-percent mb-msg">
+                        <div class="skill-name">
+                            <span> Redux Store </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="eighty-percent mb-black">
+                        <div class="skill-name">
+                            <span> Tailwind CSS </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="thirty-percent mb-lime">
+                        <div class="skill-name">
+                            <span> REST APIs </span>
                         </div>
                     </div>
                 </div>
