--- a/index.html
+++ b/index.html
@@ -206,14 +206,14 @@
                 <div class="skill-progress">
                     <div class="eighty-five-percent mb-orange">
                         <div class="skill-name">
-                            <span> HTML </span>
+                            <span> HTML5 </span>
                         </div>
                     </div>
                 </div>
                 <div class="skill-progress">
                     <div class="eighty-percent mb-light-purple">
                         <div class="skill-name">
-                            <span> CSS </span>
+                            <span> CSS3 </span>
                         </div>
                     </div>
                 </div>
