--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -103,6 +103,7 @@
     <section>
         <h2>ACHIEVEMENTS</h2>
         <ul>
+            <li>Bagged the 1st prize in a Coding & Aptitude contest held by Accurejob and won their merchandise</li>
             <li>Secured 5th rank in College NextTech Coding Competition</li>
             <li>Coordinated and prepared the Coding Questions for Hackathon Coding Competition event conducted at college</li>
         </ul>
