--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     I belong from Agra,Uttar Pradesh,India. <br>
                     I am pursuing B.Tech from Anand Engineering College Agra and is currently in 3rd year of my B.Tech journey. <br>
                     So far , I have worked a lot enhancing my skills whether it is in the field of Competitive Coding or learning a particular domain. <br>
-                    Bagging 4 stars at Codechef and higher ratings at Codeforces & Leetcode too , I have been coding on a number of platforms like Coding Ninjas and Geeks for Geeks securing a rank in top 5 of our College ever. <br>
+                    Bagging 4 stars at Codechef and higher ratings at Codeforces & Leetcode too , I have been coding on a number of platforms like Coding Ninjas and Geeks for Geeks securing a rank in top 3 of our College ever. <br>
                     <br><br>
                     Please refer to my github account mentioned above for my projects ,I have a lot to show &smile;
                     <br>
@@ -311,11 +311,26 @@
                 <div class="skill-progress">
                     <div class="thirty-percent mb-lime">
                         <div class="skill-name">
-                            <span> REST APIs </span>
+                            <span> Rest_APIs </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="sixty-percent mb-msg">
+                        <div class="skill-name">
+                            <span> Artificial_Intelligence </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="fifty-percent mb-lime">
+                        <div class="skill-name">
+                            <span> Machine_Learning </span>
                         </div>
                     </div>
                 </div>
             </div>
+            
 
         </section>
 
@@ -329,6 +344,22 @@
             </h1>
 
             <div class="timeline">
+
+                <div class="timeline-box ">
+                    <div class="timeline-container">
+                        <h4 class="experience-company-name"> Celebal Technologies</h4>
+                        <h5 class="experience-duration m0"> May 2024 - July 2024 </h5>
+
+                        <p class="experience-description text-justify"> 
+                            Diving into the first internship in summer'24 , i got this wonderful opportunity to showcase and further enhance my skills in the domain of Node.JS provided by Celebal Technologies.
+                            <br>
+                            <a href="https://drive.google.com/file/d/1nrHtwBmIktFopEouJaVKyAIn6GH50ACR/view?usp=sharing">OFFER LETTER</a>
+        
+                        </p>
+                    </div>
+                </div>
+
+
 
                 <div class="timeline-box ">
                     <div class="timeline-container">
