--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -103,6 +103,8 @@
     <section>
         <h2>ACHIEVEMENTS</h2>
         <ul>
+            <li>Leaded my team among top 20 teams from all over India in GL Bajaj Hackathon 3.0 held at GL Bajaj ,Noida</li>
+            <li>Social Summer of Code 2024 Contributor</li>
             <li>Bagged the 1st prize in a Coding & Aptitude contest held by Accurejob and won their merchandise</li>
             <li>Secured 5th rank in College NextTech Coding Competition</li>
             <li>Coordinated and prepared the Coding Questions for Hackathon Coding Competition event conducted at college</li>
