--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -87,6 +87,12 @@
             <li>
                 <h4>Android Studio for Android Development</h4>
             </li>
+            <li>
+                <h4>Artificial Intelligence</h4>
+            </li>
+            <li>
+                <h4>Machine Learning</h4>
+            </li>
         </ul>
         <hr/>
     </section>
