--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
                 <p>
                     Greetings, I am Usaid Rashid, <br>
                     I belong from Agra,Uttar Pradesh,India. <br>
-                    I am pursuing B.Tech from Anand Engineering College Agra and is currently in 3rd year of my B.Tech journey. <br>
+                    I am pursuing B.Tech from Anand Engineering College (aka Sharda University Agra) Agra and is currently in Final Year of my B.Tech journey. <br>
                     So far , I have worked a lot enhancing my skills whether it is in the field of Competitive Coding or learning a particular domain. <br>
-                    Bagging 4 stars at Codechef and higher ratings at Codeforces & Leetcode too , I have been coding on a number of platforms like Coding Ninjas and Geeks for Geeks securing a rank in top 3 of our College ever. <br>
+                    I've consistently achieved top performance in coding competitions, securing 4-star ratings on CodeChef and GeeksforGeeks (placing among the top 3 in my college's history) and maintaining a LeetCode contest rating of 1750+. I actively hone my skills on platforms like Coding Ninjas and Codeforces.<br>
                     <br><br>
                     Please refer to my github account mentioned above for my projects ,I have a lot to show &smile;
                     <br>
@@ -527,7 +527,7 @@
                         </div>
                         <h3 class="experience-designation  m0 m-blue"> CBSE Boards 12th </h3>
                         <h4 class="experience-company-name "> C.R. OASIS Senior Convent School Delhi </h4>
-                        <h5 class="experience-duration m0"> 2019 </h5>
+                        <h5 class="experience-duration m0"> 2020 </h5>
                         <p class="experience-description text-justify"> 
                             One of the worst phases of my life, my downfall period in which i suffered a lot.
                             <br>
@@ -544,7 +544,7 @@
                         </div>
                         <h3 class="experience-designation  m0 m-blue"> ICSE Boards 10th </h3>
                         <h4 class="experience-company-name "> St. Peter's College , Agra </h4>
-                        <h5 class="experience-duration m0"> 2017 </h5>
+                        <h5 class="experience-duration m0"> 2018 </h5>
                         <p class="experience-description text-justify">
                             During my 10th class,  I was one of the most brilliant student of our class , securing a lot in academics and had a lot of dreams <br>
                             I bagged 90% in class 10th and was fully prepared to prepare for JEE Exams for an IIT or NIT.
