--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     So far , I have worked a lot enhancing my skills whether it is in the field of Competitive Coding or
                     learning a particular domain. <br>
                     I've consistently achieved top performance in coding competitions, securing 4-star ratings on
-                    CodeChef and GeeksforGeeks (placing among the top 3 in my college's history) and maintaining a
+                    CodeChef and GeeksforGeeks (placing #2 in my college's history) and maintaining a
                     LeetCode contest rating of 1750+. I actively hone my skills on platforms like Coding Ninjas and
                     Codeforces.<br>
                     <br><br>
@@ -182,8 +182,6 @@
             </div>
 
         </section>
-
-
 
         <section id="skills">
             <h1 class="section-heading mb75px ">
@@ -367,6 +365,53 @@
 
                 <div class="timeline-box ">
                     <div class="timeline-container">
+                        <h4 class="experience-company-name"> Lending Buddha</h4>
+                        <h5 class="experience-duration m0"> June 2024 - Present </h5>
+
+                        <p class="experience-description text-justify">
+                            At Lending Buddha, I began my journey as a Full Stack Developer Intern, where I quickly
+                            demonstrated my technical acumen and problem-solving skills. Within just 20 days, my
+                            exceptional performance led to a promotion to Product Development Lead. In this capacity, I
+                            played a pivotal role in Project Blinc 360, a key initiative within the company. I was
+                            responsible for developing 80% of the backend independently, a feat that earned me high
+                            praise from the team and leadership. This experience not only solidified my expertise in
+                            full-stack development but also honed my leadership and project management skills, preparing
+                            me for more complex challenges in the tech industry.
+                            <br>
+                            <a
+                                href="https://drive.google.com/file/d/1MqAsk-23aXXPVgCAUSLLxhrufpAOofoX/view?usp=sharing">OFFER
+                                LETTER</a>
+                            <br>
+                            <a
+                                href="https://drive.google.com/file/d/1IlfqXgTrFOWRxhai3nSmcgR0k8T8FS5J/view?usp=sharing">REVISED
+                                OFFER LETTER</a>
+                        </p>
+                    </div>
+                </div>
+
+
+                <div class="timeline-box ">
+                    <div class="timeline-container">
+                        <h4 class="experience-company-name"> BCS</h4>
+                        <h5 class="experience-duration m0"> June 2024 - August 2024 </h5>
+
+                        <p class="experience-description text-justify">
+                            During my BCS internship, I served as the Scrum Master for the Medgen project, a
+                            comprehensive Medicare website focused on providing users with easy access to generic
+                            alternatives of medicines. My primary responsibility was to facilitate the agile process,
+                            ensuring smooth sprint planning, daily stand-ups, and sprint reviews. I worked closely with
+                            cross-functional teams to remove impediments, improve collaboration, and maintain a high
+                            level of productivity. This role allowed me to enhance my leadership skills, fostered a deep
+                            understanding of agile methodologies, and provided me with invaluable experience in managing
+                            the complexities of healthcare-related web development projects.
+                            <br>
+                        </p>
+                    </div>
+                </div>
+
+
+                <div class="timeline-box ">
+                    <div class="timeline-container">
                         <h4 class="experience-company-name"> Celebal Technologies</h4>
                         <h5 class="experience-duration m0"> May 2024 - July 2024 </h5>
 
@@ -530,13 +575,13 @@
                         
                     </div>
                 </div>
-                <div id="timeline-divider">
-                    <div class="timeline-traveller">
-                        <div>
-                            <i class="fa-solid fa-plane"></i>
-                        </div>
+                <div id=" timeline-divider">
+                                <div class="timeline-traveller">
+                                    <div>
+                                        <i class="fa-solid fa-plane"></i>
+                                    </div>
+                                </div>
                     </div>
-                </div>
 
                 </div>
 
@@ -764,7 +809,7 @@
                             efficient platform for both property owners and renters.
 
                             <br>
-                            <a href="https://github.com/UsaidRashid/Who-Said-Escape">Github Repo</a>
+                            <a href="https://github.com/UsaidRashid/Who-Said-Escape">Github Repository</a>
                             <br>
                             <a href="https://who-said-escapes.onrender.com/">Enjoy the application</a>
 
