--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -118,9 +118,10 @@
         <h2>ACHIEVEMENTS & POSITION OF RESPONSIBILITIES</h2>
         <ul>
             <li> 4 stars at CodeChef.</li>
-            <li>600+ Leetcode Questions | 12 Badges till now | 1750 Contest Rating (Top 9% in the world).</li>
-            <li> 4 stars competitive at GFG | 2000+ Coding Score | Ranked #2 ever from our college.</li>
-            <li> High Ratings at Codeforces | Level 5 (Champion) , Better than 96% at Coding Ninjas.</li>
+            <li>600+ Leetcode Questions | 13 Badges till now | 1750 Contest Rating (Top 9% in the world).</li>
+            <li> 4 stars at GFG (top 6% in the world) | 2500+ Coding Score | Ranked #1 coder ever from our college.</li>
+            <li> Level 5 (Master) , top 4% in the world at Coding Ninjas.</li>
+            <li>High Ratings at Codeforces </li>
             <li> Secured 5th Rank in NextTech Coding Competetion held at our College.</li>
             <li> Secured 1st Rank and merchandise in a Coding Competetion by Accure job.</li>
             <li> Coordinated and prepared the Coding Questions of a Hackathon Coding Competetion conducted at college</li>
