--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     So far , I have worked a lot enhancing my skills whether it is in the field of Competitive Coding or
                     learning a particular domain. <br>
                     I've consistently achieved top performance in coding competitions, securing 4-star ratings on
-                    CodeChef and GeeksforGeeks (placing #2 in my college's history) and maintaining a
+                    CodeChef and GeeksforGeeks (placing #1 coder ever in my college's history) and maintaining a
                     LeetCode contest rating of 1750+. I actively hone my skills on platforms like Coding Ninjas and
                     Codeforces.<br>
                     <br><br>
