--- a/index.html
+++ b/index.html
@@ -363,10 +363,34 @@
 
             <div class="timeline">
 
+
+                <div class="timeline-box ">
+                    <div class="timeline-container">
+                        <h4 class="experience-company-name"> Edunova Innovation Lab</h4>
+                        <h5 class="experience-duration m0"> August 2024 - Present </h5>
+
+                        <p class="experience-description text-justify">
+                           As a Software Development Intern at Edunova Innovation Lab, I am actively engaged in building scalable and efficient web applications using modern web development frameworks. My primary responsibilities include designing and developing user-centric features in Next.js, leveraging its capabilities for server-side rendering and static site generation to improve application performance.
+                            <br>
+
+I have also been working extensively with zod for schema validation and react queries/tanstack queries to manage server-side data fetching and caching. These tools help ensure that the applications are both resilient and maintainable, with a focus on optimizing data-fetching strategies and managing state efficiently.
+
+                            <br>
+During my time here, I have contributed to enhancing the overall development workflow by adhering to best practices in code quality and architecture, and have gained valuable experience in collaborating with cross-functional teams. This internship has provided me with hands-on experience in working with cutting-edge technologies, deepening my knowledge of front-end development and back-end data handling.
+                            <br>
+                            <a
+                                href="https://drive.google.com/file/d/1hX2Qa14JnJNSfoKE21aAYkyIJ1Ej_ert/view?usp=sharing">OFFER
+                                LETTER</a>
+                        </p>
+                    </div>
+                </div>
+
+
+                
                 <div class="timeline-box ">
                     <div class="timeline-container">
                         <h4 class="experience-company-name"> Lending Buddha</h4>
-                        <h5 class="experience-duration m0"> June 2024 - Present </h5>
+                        <h5 class="experience-duration m0"> June 2024 - August 2024 </h5>
 
                         <p class="experience-description text-justify">
                             At Lending Buddha, I began my journey as a Full Stack Developer Intern, where I quickly
