--- a/index.html
+++ b/index.html
@@ -409,6 +409,15 @@ During my time here, I have contributed to enhancing the overall development wor
                             <a
                                 href="https://drive.google.com/file/d/1IlfqXgTrFOWRxhai3nSmcgR0k8T8FS5J/view?usp=sharing">REVISED
                                 OFFER LETTER</a>
+                            <br>
+                            <a
+                                href="https://drive.google.com/file/d/1FevpCsUjjJpa9iccr9XN7oInF2Rz1ycQ/view?usp=sharing">
+                                CERTIFICATE OF COMPLETION</a>
+                            <br>
+                            <a
+                                href="https://drive.google.com/file/d/1CrBc2zXNlgHlrCuvlbHpq-TaPm0zqKp4/view?usp=sharing">
+                                LETTER OF RECOMMENDATION</a>
+                            
                         </p>
                     </div>
                 </div>
