--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -48,6 +48,9 @@
                             <li>Java Script</li>
                             <li>JQuery</li>
                             <li>React.JS</li>
+                            <li>Next.JS</li>
+                            <li>React Query</li>
+                            <li>zod</li>
                             <li>Tailwind CSS</li>
                             <li>Bootstrap</li>
                             <li>SASS</li>
