--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
         <section id="about">
             <div id="my-image">
-                <img src="./pppbg.jpg" alt="" srcset="">
+                <img src="./ppp.jpg" alt="" srcset="">
             </div>
 
             <div id="about-para">
