--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Usaid Rashid</h1>
         <h4>Born to code &#128578</h4>
-        <img src="./ppbg.jpg" height="200px" width="100px" alt="">
+        <img src="./pp.jpg" height="150px" width="100px" alt="">
         <hr />
     </header>
 
