--- a/index.html
+++ b/index.html
@@ -707,6 +707,32 @@ During my time here, I have contributed to enhancing the overall development wor
 
                  <div class="timeline-box left ">
                     <div class="timeline-container">
+                        <h3 class="experience-designation  m0 m-blue"> Who-Said Mood Muse </h3>
+                        <h5 class="experience-duration m0"> October 2024 </h5>
+
+                        <p class="experience-description text-justify">
+                          Leveraging the power of computer vision with OpenCV, Next.js, and machine learning libraries like DeepFace and FER, "Who-Said Mood Muse" captures and interprets facial expressions in real-time to provide detailed insights on mood, age, and gender attributes. This project combines a responsive UI with fast and accurate backend processing to deliver a seamless experience for anyone interested in next-gen face analysis tech. 🤖✨
+<br>
+🔍 Key Features:
+<br>
+Real-time Facial Detection & Attribute Prediction 🌟<br>
+Mood Analysis with live emotional insights<br>
+User-friendly Design: A sleek interface with Next.js, making complex AI accessible for everyday use.<br>
+Harnessing AI's potential to interpret expressions, "Who-Said Mood Muse" is just a peek into the future of emotion-aware applications. 🌐<br>
+<br>
+#AI #MachineLearning #ComputerVision #FaceRecognition #DeepFace #FER #Nextjs #OpenCV #WhoSaid
+                            <br>
+
+                            <a href="https://github.com/UsaidRashid/Who-Said-Mood_Muse">Github Repository</a>
+                        </p>
+                    </div>
+                </div>
+
+                
+                
+
+                 <div class="timeline-box left ">
+                    <div class="timeline-container">
                         <h3 class="experience-designation  m0 m-blue"> Blinc 360 </h3>
                         <h5 class="experience-duration m0"> June 2024 - Present </h5>
 
