--- a/index.html
+++ b/index.html
@@ -364,10 +364,34 @@
             <div class="timeline">
 
 
+                 <div class="timeline-box ">
+                    <div class="timeline-container">
+                        <h4 class="experience-company-name"> Edunova Innovation Lab</h4>
+                        <h5 class="experience-duration m0"> January 2025 - Present </h5>
+
+                        <p class="experience-description text-justify">
+                           As an Associate Software Engineer at Daffodil Softwares, I am actively contributing to the development of scalable mobile and backend applications. My key responsibilities include building and maintaining a React Native frontend for CK-Kids, a child healthcare platform, ensuring smooth user experience and optimized UI performance.
+                            <br>
+
+On the backend, I work extensively with Laravel (PHP) to create clean, efficient, and scalable RESTful APIs for a large-scale school management system for a Chennai-based international school. This includes handling authentication, authorization, and data validation while following MVC design patterns.
+
+                            <br>
+I collaborate closely with cross-functional teams in Agile sprints, participate in code reviews, and contribute to improving codebase quality through modular architecture.
+                            <br>
+                            Working at Daffodil has enhanced my understanding of mobile development, backend logic, and scalable API design, while strengthening my skills in teamwork, performance optimization, and real-world application development.
+                            <br>
+                            <a
+                                href="https://drive.google.com/file/d/1qOZYx8DkB3pueKaNQoQU-YnW8I9US7jD/view?usp=sharing">OFFER
+                                LETTER</a>
+                        </p>
+                    </div>
+                </div>
+
+
                 <div class="timeline-box ">
                     <div class="timeline-container">
                         <h4 class="experience-company-name"> Edunova Innovation Lab</h4>
-                        <h5 class="experience-duration m0"> August 2024 - Present </h5>
+                        <h5 class="experience-duration m0"> August 2024 - December 2024 </h5>
 
                         <p class="experience-description text-justify">
                            As a Software Development Intern at Edunova Innovation Lab, I am actively engaged in building scalable and efficient web applications using modern web development frameworks. My primary responsibilities include designing and developing user-centric features in Next.js, leveraging its capabilities for server-side rendering and static site generation to improve application performance.
