--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 
                  <div class="timeline-box ">
                     <div class="timeline-container">
-                        <h4 class="experience-company-name"> Edunova Innovation Lab</h4>
+                        <h4 class="experience-company-name"> Daffodil Softwares</h4>
                         <h5 class="experience-duration m0"> January 2025 - Present </h5>
 
                         <p class="experience-description text-justify">
