Revise personal introduction and skills section
Updated personal information and added new skills related to AI development.

--- a/index.html
+++ b/index.html
@@ -165,10 +165,7 @@
                 <p>
                     Greetings, I am Usaid Rashid, <br>
                     I belong from Agra,Uttar Pradesh,India. <br>
-                    I am pursuing B.Tech from Anand Engineering College (aka Sharda University Agra) Agra and is
-                    currently in Final Year of my B.Tech journey. <br>
-                    So far , I have worked a lot enhancing my skills whether it is in the field of Competitive Coding or
-                    learning a particular domain. <br>
+                    I pursued B.Tech from Anand Engineering College (aka Sharda University Agra) Agra. <br>
                     I've consistently achieved top performance in coding competitions, securing 4-star ratings on
                     CodeChef and GeeksforGeeks (placing #1 coder ever in my college's history) and maintaining a
                     LeetCode contest rating of 1750+. I actively hone my skills on platforms like Coding Ninjas and
@@ -197,6 +194,13 @@
                     <div class="ninety-percent mb-blue">
                         <div class="skill-name">
                             <span> C++ </span>
+                        </div>
+                    </div>
+                </div>
+                 <div class="skill-progress">
+                    <div class="seventy-percent mb-lime">
+                        <div class="skill-name">
+                            <span> Gen AI </span>
                         </div>
                     </div>
                 </div>
@@ -379,6 +383,8 @@ On the backend, I work extensively with Laravel (PHP) to create clean, efficient
 I collaborate closely with cross-functional teams in Agile sprints, participate in code reviews, and contribute to improving codebase quality through modular architecture.
                             <br>
                             Working at Daffodil has enhanced my understanding of mobile development, backend logic, and scalable API design, while strengthening my skills in teamwork, performance optimization, and real-world application development.
+                            <br>
+                              Currently transitioning into AI-focused development, building expertise in LLM-based systems,Retrieval-Augmented Generation (RAG), and agentic workflows as part of organizational AI initiatives.
                             <br>
                             <a
                                 href="https://drive.google.com/file/d/1qOZYx8DkB3pueKaNQoQU-YnW8I9US7jD/view?usp=sharing">OFFER
