Update education, skills, and achievements in portfolio
Updated SGPA for B.Tech and added new skills under Artificial Intelligence. Revised achievements and positions of responsibilities with updated statistics.

--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -18,7 +18,7 @@
     <section>
         <h2>EDUCATION</h2>
         <ul>
-            <li><b>B.Tech CSE </b>: 8 SGPA</li>
+            <li><b>B.Tech CSE </b>: 8.03 SGPA</li>
             <li><b>12th (CBSE)</b>: 60%</li>
             <li><b>10th (ICSE)</b>: 90% </li>
         </ul>
@@ -83,6 +83,19 @@
                 </ul>
             </li>
             <li>
+                 <h4>Artificial Intelligence & LLM Sytems</h4>
+                <ul>
+                    <li>Retrieval-Augmented Generation</li>
+                    <li>Agentic AI</li>
+                    <li>Langchain</li>
+                    <li>Langgraph</li>
+                    <li>Model Context Protocol</li>
+                    <li>Prompt Engineering</li>
+                    <li>Machine Learning</li>
+                    <li>Deep Learning</li>
+                </ul>
+            </li>
+            <li>
                 <h4>Graphical User Interfaces</h4>
                 <ul>
                     <li>C++ GUI with QT</li>
@@ -91,12 +104,6 @@
             </li>
             <li>
                 <h4>Android Studio for Android Development</h4>
-            </li>
-            <li>
-                <h4>Artificial Intelligence</h4>
-            </li>
-            <li>
-                <h4>Machine Learning</h4>
             </li>
             <li>
                 <h4>Elastic Search</h4>
@@ -121,9 +128,9 @@
         <h2>ACHIEVEMENTS & POSITION OF RESPONSIBILITIES</h2>
         <ul>
             <li> 4 stars at CodeChef.</li>
-            <li>600+ Leetcode Questions | 13 Badges till now | 1750 Contest Rating (Top 9% in the world).</li>
-            <li> 4 stars at GFG (top 6% in the world) | 2500+ Coding Score | Ranked #1 coder ever from our college.</li>
-            <li> Level 5 (Master) , top 4% in the world at Coding Ninjas.</li>
+            <li>1200+ Leetcode Questions | 35+ Badges till now | 1750 Contest Rating (Top 9% in the world).</li>
+            <li> 4 stars at GFG (top 6% in the world) | 4000+ Coding Score | Ranked #1 coder ever from our college.</li>
+            <li> Level 7 (Ninja Dominator) , top 4% in the world at Coding Ninjas.</li>
             <li>High Ratings at Codeforces </li>
             <li> Secured 5th Rank in NextTech Coding Competetion held at our College.</li>
             <li> Secured 1st Rank and merchandise in a Coding Competetion by Accure job.</li>
